--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
                 <div class="member-image">
                     <img src="/imgs/nhu.png" alt="Thành viên 1">
                     <div class="member-overlay">
-                        <a href="nhu.html" class="view-cv-btn">Xem CV</a>
+                        <a href="BuiDangQuynhNhu/nhu.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
                 <h3>Bùi Đặng Quỳnh Như</h3>
@@ -103,12 +103,10 @@
         <div class="team-footer">
             <div class="team-info">
                 <h2>Về chúng tôi</h2>
-                <p>Nhóm Ngũ Vị Hương - Lớp CNTT1 - Trường Đại học Giao thông vận tải TP.HCM</p>
+                <p>Nhóm Ngũ Vị Hương - Trường Đại học Giao thông vận tải TP.HCM</p>
             </div>
             <div class="team-social">
                 <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
