--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
                 <p>Nhóm Ngũ Vị Hương - Trường Đại học Giao thông vận tải TP.HCM</p>
             </div>
             <div class="team-social">
-                <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/nhunhu2310/CV" class="social-icon"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </div>
