--- a/BuiDangQuynhNhu/nhu.html
+++ b/BuiDangQuynhNhu/nhu.html
@@ -33,13 +33,13 @@
         <i class="fas fa-user"></i>
         <span>Giới thiệu</span>
       </a>
-      <a href="#skills" class="nav-link" onclick="scrollToSection('skills')" title="Các kỹ năng">
-        <i class="fas fa-tools"></i>
-        <span>Kỹ năng</span>
-      </a>
       <a href="#education" class="nav-link" onclick="scrollToSection('education')" title="Thông tin học vấn">
         <i class="fas fa-graduation-cap"></i>
         <span>Học vấn</span>
+      </a>  
+      <a href="#skills" class="nav-link" onclick="scrollToSection('skills')" title="Các kỹ năng">
+        <i class="fas fa-tools"></i>
+        <span>Kỹ năng</span>
       </a>
       <a href="#projects" class="nav-link" onclick="scrollToSection('projects')" title="Các dự án">
         <i class="fas fa-project-diagram"></i>
@@ -147,6 +147,25 @@
         </ul>
       </section>
 
+ <!-- Thông tin học vấn và chuyên ngành -->
+      <section id="education" class="section">
+        <h2><i class="fas fa-graduation-cap"></i>Học vấn</h2>
+        <div class="experience-item">
+          <h3>TRƯỜNG ĐẠI HỌC GIAO THÔNG VẬN TẢI THÀNH PHỐ HỒ CHÍ MINH</h3>
+          <div class="date"><i class="far fa-calendar-alt"></i>2023 - Hiện tại</div>
+          <p>Khoa: Viện Công nghệ thông tin và Điện, điện tử</p>
+          <p>Ngành: Công nghệ thông tin</p>
+          <p>Chuyên ngành: Công nghệ thông tin</p>
+        </div>
+      </section>
+
+      <!-- Thông tin chứng chỉ/ giải thưởng -->
+      <section class="section">
+        <h2><i class="fas fa-certificate"></i>Chứng chỉ/ Giải thưởng</h2>
+        <div class="experience-item">
+          <p>Không có</p>
+        </div>
+      </section>
       <!-- Kỹ năng chuyên môn: Front-end, Back-end, Ngôn ngữ -->
       <section id="skills" class="section">
         <h2><i class="fas fa-tools"></i>Kỹ năng chuyên môn</h2>
@@ -195,18 +214,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
-
-      <!-- Thông tin học vấn và chuyên ngành -->
-      <section id="education" class="section">
-        <h2><i class="fas fa-graduation-cap"></i>Học vấn</h2>
-        <div class="experience-item">
-          <h3>TRƯỜNG ĐẠI HỌC GIAO THÔNG VẬN TẢI THÀNH PHỐ HỒ CHÍ MINH</h3>
-          <div class="date"><i class="far fa-calendar-alt"></i>2023 - Hiện tại</div>
-          <p>Khoa: Viện Công nghệ thông tin và Điện, điện tử</p>
-          <p>Ngành: Công nghệ thông tin</p>
-          <p>Chuyên ngành: Công nghệ thông tin</p>
         </div>
       </section>
 
