--- a/home.html
+++ b/home.html
@@ -47,9 +47,9 @@
             <!-- Thẻ thông tin thành viên 2 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="imgs/member2.jpg" alt="Thành viên 2">
+                    <img src="imgs/avatar.jpg" alt="Thành viên 2">
                     <div class="member-overlay">
-                        <a href="vien.html" class="view-cv-btn">Xem CV</a>
+                        <a href="NguyenXuanMinh/minh.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
                 <h3>Thành Viên 2</h3>
