--- a/NguyenXuanMinh/minh.html
+++ b/NguyenXuanMinh/minh.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="minh.css">
 </head>
+
 <body>
   <button class="dark-mode-toggle" title="Chuyển đổi chế độ sáng/tối">
     <i class="fas fa-moon"></i>
   </button>
+
   <div class="container" role="main">
     <header>
       <div class="photo" aria-label="Ảnh đại diện">
@@ -34,7 +36,8 @@
         <a href="#about" class="nav-link"><i class="fas fa-user"></i><span>Giới thiệu</span></a>
         <a href="#skills" class="nav-link"><i class="fas fa-tools"></i><span>Kỹ năng</span></a>
         <a href="#experience" class="nav-link"><i class="fas fa-briefcase"></i><span>Kinh nghiệm</span></a>
-        <a href="#interests" class="nav-link"><i class="fas fa-heart"></i><span>Sở thích</span></a> <a href="#contact" class="nav-link"><i class="fas fa-envelope"></i><span>Liên hệ</span></a>
+        <a href="#interests" class="nav-link"><i class="fas fa-heart"></i><span>Sở thích</span></a>
+        <a href="#contact" class="nav-link"><i class="fas fa-envelope"></i><span>Liên hệ</span></a>
       </div>
     </nav>
 
@@ -44,10 +47,8 @@
       <section id="about">
         <h3>Giới thiệu</h3>
         <p>Sinh viên năm 2 đam mê công nghệ và có định hướng trở thành Blockchain Developer chuyên nghiệp. Với nền tảng kiến thức vững chắc về lập trình và sự chú ý đến từng chi tiết, tôi đang tích cực tìm hiểu kiến trúc blockchain, hợp đồng thông minh và các nền tảng phi tập trung như Ethereum. Luôn sẵn sàng học hỏi và đóng góp vào các dự án đổi mới trong lĩnh vực Web3.</p>
-
         <h3>Mục tiêu nghề nghiệp</h3>
         <p>Với tư cách là sinh viên năm 2 đam mê công nghệ, tôi đặt mục tiêu trở thành Blockchain Developer chuyên nghiệp trong 3-5 năm tới.</p>
-
         <strong>Ngắn hạn (1-2 năm):</strong>
         <ul>
           <li><strong>Nắm vững kiến thức nền tảng:</strong> Hoàn thành chương trình đại học với kết quả tốt, đặc biệt tập trung vào các môn khoa học máy tính.</li>
@@ -56,7 +57,6 @@
           <li><strong>Thực hành:</strong> Xây dựng dApps đơn giản, tham gia dự án mã nguồn mở.</li>
           <li><strong>Cải thiện tiếng Anh:</strong> Đọc hiểu tài liệu chuyên ngành và giao tiếp quốc tế.</li>
         </ul>
-
         <strong>Dài hạn (3-5 năm):</strong>
         <ul>
           <li><strong>Chuyên gia Blockchain:</strong> Phát triển chuyên sâu về smart contract, dApps và tích hợp blockchain.</li>
@@ -74,38 +74,54 @@
           <div class="skill-pill">JavaScript</div>
           <div class="skill-pill">React</div>
           <div class="skill-pill">Git</div>
-          <div class="skill-pill">Solidity (Đang học)</div> <div class="skill-pill">Rust (Đang học)</div>  </div>
+          <div class="skill-pill">Solidity (Đang học)</div>
+          <div class="skill-pill">Rust (Đang học)</div>
+        </div>
       </section>
 
       <section id="experience">
         <h3>Kinh nghiệm</h3>
         <article class="experience-item">
           <div class="item-header">
-            <span class="item-title">Dự án Blockchain cá nhân: Polkadot (DOT)</span>
-            <span class="item-dates">2024 - Hiện tại</span>
-          </div>
-          <p class="item-desc">
-            Phát triển một dApp đơn giản sử dụng Solidity trên nền tảng Ethereum testnet. Tập trung vào việc nắm vững các khái niệm cơ bản về hợp đồng thông minh và tương tác blockchain.
-          </p>
-        </article>
-        <article class="experience-item">
-          <div class="item-header">
             <span class="item-title">Kỹ năng lập trình Blockchain đang phát triển</span>
             <span class="item-dates">2023 - Hiện tại</span>
           </div>
-          <p class="item-desc">
-            Đang học và thực hành Solidity. Nắm vững các kiến thức nền tảng về cấu trúc dữ liệu, giải thuật và các nguyên tắc lập trình hướng đối tượng.
-          </p>
+          <p class="item-desc">Đang học và thực hành Solidity. Nắm vững các kiến thức nền tảng về cấu trúc dữ liệu, giải thuật và các nguyên tắc lập trình hướng đối tượng.</p>
         </article>
         <article class="experience-item">
           <div class="item-header">
             <span class="item-title">Tìm hiểu về Blockchain và các ứng dụng</span>
             <span class="item-dates">2023 - Hiện tại</span>
           </div>
-          <p class="item-desc">
-            Nghiên cứu về kiến trúc blockchain, cơ chế đồng thuận (PoW, PoS), DeFi, NFT và các ứng dụng tiềm năng của công nghệ blockchain.
-          </p>
+          <p class="item-desc">Nghiên cứu về kiến trúc blockchain, cơ chế đồng thuận (PoW, PoS), DeFi, NFT và các ứng dụng tiềm năng của công nghệ blockchain.</p>
         </article>
+      </section>
+
+      <section id="education">
+        <h3>Học vấn</h3>
+        <ul>
+          <li><strong>Trường:</strong> Đại học Giao thông vận tải TP HCM (UTH)</li>
+          <li><strong>Ngành:</strong> Công nghệ thông tin</li>
+          <li><strong>Năm học:</strong> 2023 - 2027 (Dự kiến)</li>
+          <li><strong>Thành tích:</strong> GPA 3.3/4.0, tham gia các CLB công nghệ</li>
+        </ul>
+      </section>
+
+      <section id="projects">
+        <h3>Dự án</h3>
+        <ul>
+          <li><strong>CryptoVote dApp:</strong> Ứng dụng bỏ phiếu phi tập trung dùng Solidity & Ethereum testnet. Học cách tạo hợp đồng thông minh và xử lý dữ liệu người dùng.</li>
+          <li><strong>NFT Marketplace Prototype:</strong> Xây dựng mô hình marketplace cho NFT đơn giản với IPFS, Solidity và Web3.js. Cho phép tạo, hiển thị và giao dịch NFT giả lập.</li>
+          <li><strong>Simple Wallet Contract:</strong> Hợp đồng thông minh quản lý ví cơ bản: nạp, rút và xem số dư. Tập trung học quản lý trạng thái và bảo mật smart contract.</li>
+        </ul>
+      </section>
+
+      <section id="languages">
+        <h3>Ngôn ngữ</h3>
+        <ul>
+          <li><strong>Tiếng Việt:</strong> Bản ngữ</li>
+          <li><strong>Tiếng Anh:</strong> Trung cấp – có khả năng đọc tài liệu kỹ thuật và giao tiếp cơ bản</li>
+        </ul>
       </section>
 
       <section id="interests">
@@ -124,7 +140,7 @@
 
       <section id="contact">
         <h3>Liên hệ</h3>
-        Address: 350/54/45C Lê Đức Thọ, p6, Gò Vấp<br>
+        Address: 350/54/45C Lê Đức Thọ, P6, Gò Vấp<br>
         Phone number: 0394037328<br>
         Email: minhnx0034@ut.edu.vn<br>
         Date of birth: 15/02/2005
