--- a/NguyenXuanMinh/minh.html
+++ b/NguyenXuanMinh/minh.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Giao Diện CV Có Thanh Điều Hướng Và Avatar</title>
+  <title>CV - Nguyễn Xuân Minh</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="minh.css">
 </head>
@@ -16,7 +16,7 @@
   <div class="container" role="main">
     <header>
       <div class="photo" aria-label="Ảnh đại diện">
-        <img src="/imgs/avatar.jpg" alt="Ảnh đại diện" />
+        <img src="/imgs/minh.jpg" alt="Ảnh đại diện" />
       </div>
       <div class="header-info">
         <h1>Nguyễn Xuân Minh</h1>
@@ -66,18 +66,18 @@
         </ul>
       </section>
 
-      <section id="skills">
-        <h3>Kỹ năng</h3>
-        <div class="skills-list">
-          <div class="skill-pill">HTML</div>
-          <div class="skill-pill">CSS</div>
-          <div class="skill-pill">JavaScript</div>
-          <div class="skill-pill">React</div>
-          <div class="skill-pill">Git</div>
-          <div class="skill-pill">Solidity (Đang học)</div>
-          <div class="skill-pill">Rust (Đang học)</div>
-        </div>
-      </section>
+<section id="skills">
+  <h3>Kỹ năng</h3>
+  <div class="skills-grid">
+    <div class="skill-card"><i class="fab fa-html5"></i> HTML</div>
+    <div class="skill-card"><i class="fab fa-css3-alt"></i> CSS</div>
+    <div class="skill-card"><i class="fab fa-js-square"></i> JavaScript</div>
+    <div class="skill-card"><i class="fab fa-react"></i> React</div>
+    <div class="skill-card"><i class="fab fa-git-alt"></i> Git</div>
+    <div class="skill-card"><i class="fab fa-ethereum"></i> Solidity <small>(Đang học)</small></div>
+    <div class="skill-card"><i class="fab fa-rust"></i> Rust <small>(Đang học)</small></div>
+  </div>
+</section>
 
       <section id="experience">
         <h3>Kinh nghiệm</h3>
