--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
             <!-- Thẻ thành viên 2 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="imgs/avatar.jpg" alt="Thành viên 2">
+                    <img src="imgs/minh.jpg" alt="Thành viên 2">
                     <div class="member-overlay">
                         <a href="NguyenXuanMinh/minh.html" class="view-cv-btn">Xem CV</a>
                     </div>
