--- a/LeSiTrung/trung.html
+++ b/LeSiTrung/trung.html
@@ -1,136 +1,196 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Của Bạn</title>
-    <link rel="stylesheet" href="trung.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV - Trung</title>
+  <link rel="stylesheet" href="trung.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    .hobby-btn {
+      padding: 10px 15px;
+      background-color: #ff6b81;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      margin-top: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .hobby-btn:hover {
+      background-color: #ff4757;
+    }
+    #hobby-details {
+      margin-top: 15px;
+      background-color: #f9f9f9;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-    <header class="banner">
-        <div class="banner-content">
-            <h1>Chào mừng đến với CV của tôi!</h1>
-            <p>Tôi là một nhà phát triển đầy nhiệt huyết và sáng tạo.</p>
-        </div>
-    </header>
+  <div class="banner">
+    <div class="banner-content">
+      <h1>Chào mừng đến với CV của tôi!</h1>
+      <p>Tôi là một nhà phát triển đầy nhiệt huyết và sáng tạo.</p>
+    </div>
+  </div>
 
-    <!-- === PHẦN NAVIGATION - MENU ĐIỀU HƯỚNG === -->
+  <!-- NAVIGATION -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="../home.html" class="nav-link" title="Về trang chủ">
-        <i class="fas fa-home"></i>
-        <span>Trang chủ</span>
-      </a>
-      <a href="#about" class="nav-link" onclick="scrollToSection('about')" title="Thông tin giới thiệu">
-        <i class="fas fa-user"></i>
-        <span>Giới thiệu</span>
-      </a>
-      <a href="#skills" class="nav-link" onclick="scrollToSection('skills')" title="Các kỹ năng">
-        <i class="fas fa-tools"></i>
-        <span>Kỹ năng</span>
-      </a>
-      <a href="#education" class="nav-link" onclick="scrollToSection('education')" title="Thông tin học vấn">
-        <i class="fas fa-graduation-cap"></i>
-        <span>Học vấn</span>
-      </a>
-      <a href="#projects" class="nav-link" onclick="scrollToSection('projects')" title="Các dự án">
-        <i class="fas fa-project-diagram"></i>
-        <span>Dự án</span>
-      </a>
-      <a href="#contact" class="nav-link" onclick="scrollToSection('contact')" title="Thông tin liên hệ">
-        <i class="fas fa-envelope"></i>
-        <span>Liên hệ</span>
-      </a>
+      <a href="../home.html" class="nav-link"><i class="fas fa-home"></i><span>Trang chủ</span></a>
+      <a href="#about" class="nav-link" onclick="scrollToSection('about')"><i class="fas fa-user"></i><span>Giới thiệu</span></a>
+      <a href="#skills" class="nav-link" onclick="scrollToSection('skills')"><i class="fas fa-tools"></i><span>Kỹ năng</span></a>
+      <a href="#education" class="nav-link" onclick="scrollToSection('education')"><i class="fas fa-graduation-cap"></i><span>Học vấn</span></a>
+      <a href="#projects" class="nav-link" onclick="scrollToSection('projects')"><i class="fas fa-project-diagram"></i><span>Dự án</span></a>
+      <a href="#hobbies" class="nav-link" onclick="scrollToSection('hobbies')"><i class="fas fa-heart"></i><span>Sở thích</span></a>
+      <a href="#contact" class="nav-link" onclick="scrollToSection('contact')"><i class="fas fa-envelope"></i><span>Liên hệ</span></a>
     </div>
   </nav>
 
-    <div class="container">
-        <aside class="sidebar">
-            <div class="profile-picture">
-                <img src="https://via.placeholder.com/150" alt="Ảnh cá nhân của bạn">
-            </div>
-            <section id="personal-info" class="card">
-                <h2><i class="fas fa-user"></i> Thông tin cá nhân</h2>
-                <ul>
-                    <li><strong>Họ và tên:</strong> [Tên của bạn]</li>
-                    <li><strong>Ngày sinh:</strong> [Ngày/tháng/năm sinh]</li>
-                    <li><strong>Giới tính:</strong> [Nam/Nữ]</li>
-                    <li><strong>Điện thoại:</strong> [Số điện thoại]</li>
-                    <li><strong>Email:</strong> [Email của bạn]</li>
-                    <li><strong>Địa chỉ:</strong> [Địa chỉ của bạn]</li>
-                </ul>
-            </section>
+  <!-- MAIN CONTAINER -->
+  <div class="main-content">
+    <aside class="left-column">
+      <div class="profile-picture">
+        <img src="/imgs/trung.jpg" alt="Ảnh cá nhân của bạn">
+      </div>
 
-            <section id="hobbies" class="card">
-                <h2><i class="fas fa-heart"></i> Sở thích</h2>
-                <ul>
-                    <li>Đọc sách</li>
-                    <li>Chơi game</li>
-                    <li>Du lịch</li>
-                    <li>[Sở thích khác của bạn]</li>
-                </ul>
-            </section>
+      <section id="about" class="card">
+        <h2><i class="fas fa-id-card"></i> Thông tin cá nhân</h2>
+        <ul>
+          <li><strong>Họ và tên:</strong> Lê Sĩ Trung</li>
+          <li><strong>Ngày sinh:</strong> 10/02/2005</li>
+          <li><strong>Giới tính:</strong> Nam</li>
+          <li><strong>Điện thoại:</strong> 0792290735</li>
+          <li><strong>Email:</strong> si9902612@gmail.com</li>
+          <li><strong>Địa chỉ:</strong> Đường Hậu Lân 2, xã Bà Điểm, huyện Hóc Môn, Thành phố Hồ Chí Minh</li>
+        </ul>
+      </section>
 
-            <section id="languages-skills" class="card">
-                <h2><i class="fas fa-globe"></i> Ngôn ngữ & Kỹ năng</h2>
-                <h3>Ngôn ngữ</h3>
-                <ul>
-                    <li>Tiếng Việt: Bản ngữ</li>
-                    <li>Tiếng Anh: [Mức độ thành thạo]</li>
-                </ul>
-                <h3>Kỹ năng</h3>
-                <ul>
-                    <li>HTML, CSS, JavaScript</li>
-                    <li>ReactJS / VueJS / Angular (Nếu có)</li>
-                    <li>Node.js / Python / PHP (Nếu có)</li>
-                    <li>[Kỹ năng khác của bạn]</li>
-                </ul>
-            </section>
+      <section id="skills" class="card">
+        <h2><i class="fas fa-globe"></i> Ngôn ngữ & Kỹ năng</h2>
+        <h3>🌐 Ngôn ngữ</h3>
+        <ul>
+          <li>Tiếng Việt: Bản ngữ</li>
+          <li>Tiếng Anh: Tiếng Anh: Trình độ B1 (CEFR) – Đọc hiểu tốt, giao tiếp cơ bản trong công việc
+</li>
+        </ul>
+        <h3>🛠️ Kỹ năng</h3>
+        <ul>
+          <li>HTML, CSS, JavaScript</li>
+          <li>ReactJS</li>
+          <li>Node.js / Python / PHP </li>
+        </ul>
+      </section>
 
-            <section id="certificates-awards" class="card">
-                <h2><i class="fas fa-award"></i> Chứng chỉ - Giải thưởng</h2>
-                <ul>
-                    <li>[Tên chứng chỉ/Giải thưởng 1] - [Năm]</li>
-                    <li>[Tên chứng chỉ/Giải thưởng 2] - [Năm]</li>
-                    <li>Không có</li>
-                </ul>
-            </section>
-        </aside>
+      <section id="certificates-awards" class="card">
+        <h2><i class="fas fa-award"></i> Chứng chỉ - Giải thưởng</h2>
+        <ul>
+          <li>Không có</li>
+        </ul>
+      </section>
+    </aside>
 
-        <main class="content">
-            <section id="career-objective" class="card">
-                <h2><i class="fas fa-bullseye"></i> Mục tiêu nghề nghiệp</h2>
-                <p>
-                    [Viết mục tiêu nghề nghiệp của bạn tại đây. Ví dụ: "Tìm kiếm một vị trí lập trình viên Front-end/Back-end/Full-stack tại một môi trường làm việc năng động, nơi tôi có thể áp dụng kiến thức và kỹ năng để phát triển các sản phẩm chất lượng cao, đồng thời không ngừng học hỏi và phát triển bản thân."]
-                </p>
-            </section>
+    <main class="right-column">
+      <section id="career-objective" class="card">
+        <h2><i class="fas fa-bullseye"></i> Mục tiêu nghề nghiệp</h2>
+        <p>Mong muốn tìm kiếm một vị trí lập trình viên Front-end, Back-end hoặc Full-stack...</p>
+      </section>
 
-            <section id="projects" class="card">
-                <h2><i class="fas fa-project-diagram"></i> Dự án</h2>
-                <div class="project-item">
-                    <h3>[Tên dự án 1]</h3>
-                    <p><strong>Mô tả:</strong> [Mô tả ngắn gọn về dự án, vai trò của bạn, và công nghệ sử dụng.]</p>
-                    <p><strong>Link:</strong> <a href="[Link GitHub/Demo dự án 1]" target="_blank">[Link dự án]</a></p>
-                </div>
-                <div class="project-item">
-                    <h3>[Tên dự án 2]</h3>
-                    <p><strong>Mô tả:</strong> [Mô tả ngắn gọn về dự án, vai trò của bạn, và công nghệ sử dụng.]</p>
-                    <p><strong>Link:</strong> <a href="[Link GitHub/Demo dự án 2]" target="_blank">[Link dự án]</a></p>
-                </div>
-                </section>
-        </main>
+      <section id="career-goals" class="card">
+        <h2><i class="fas fa-road"></i> Định hướng phát triển</h2>
+        <h3>Mục tiêu ngắn hạn (1–2 năm)</h3>
+        <ul>
+          <li>Hoàn thành chương trình đại học với thành tích học tập xuất sắc, xây dựng nền tảng kiến thức vững chắc.
+
+Tích lũy kinh nghiệm thực tế thông qua các dự án cá nhân và kỳ thực tập tại các công ty công nghệ.
+
+Nâng cao kỹ năng lập trình web, đặc biệt với các công nghệ hiện đại như React và Node.js.
+
+Cải thiện khả năng tiếng Anh, chú trọng vào việc đọc hiểu tài liệu chuyên ngành và giao tiếp hiệu quả trong môi trường làm việc quốc tế.</li>
+        </ul>
+        <h3>Mục tiêu dài hạn (3–5 năm)</h3>
+        <ul>
+          <li>Trở thành một Full-stack Developer với kiến thức sâu rộng về cả front-end và back-end.
+
+Tham gia các dự án công nghệ quy mô lớn, đóng góp vào sự phát triển bền vững của doanh nghiệp.
+
+Luôn chủ động cập nhật và học hỏi công nghệ mới để thích ứng nhanh với sự thay đổi của ngành.
+
+Chia sẻ kiến thức và lan tỏa đam mê lập trình thông qua viết blog, tham gia cộng đồng lập trình viên và các buổi chia sẻ chuyên môn.
+
+</li>
+        </ul>
+      </section>
+
+      <!-- PHẦN SỞ THÍCH -->
+
+      <section id="hobbies" class="card">
+  <h2><i class="fas fa-heart"></i> Sở thích</h2>
+  <div class="hobby-grid">
+    <a href="https://www.tiktok.com/@fotball.r/video/7396189906122411270?is_from_webapp=1&sender_device=pc" target="_blank" class="hobby-box">
+      🏃‍♂️ Thể thao
+    </a>
+    <a href="https://www.leagueoflegends.com/vi-vn/" target="_blank" class="hobby-box">
+      🎮 Game mini
+    </a>
+    <a href="https://www.youtube.com/watch?v=igkoDTvBsBw" target="_blank" class="hobby-box">
+      🎧 Nghe nhạc chill
+    </a>
+    <a href="https://www.tiktok.com/@sedyyfilms/video/7466945667655650582?is_from_webapp=1&sender_device=pc" target="_blank" class="hobby-box">
+      🌍 Du lịch
+    </a>
+  </div>
+</section>
+
+      <section id="education" class="card">
+        <h2><i class="fas fa-graduation-cap"></i> Học vấn</h2>
+        <h3>TRƯỜNG ĐẠI HỌC GIAO THÔNG VẬN TẢI THÀNH PHỐ HỒ CHÍ MINH</h3>
+          <div class="date"><i class="far fa-calendar-alt"></i>2023 - Hiện tại</div>
+          <p>Khoa: Viện Công nghệ thông tin và Điện, điện tử</p>
+          <p>Ngành: Công nghệ thông tin</p>
+          <p>Chuyên ngành: Công nghệ thông tin</p>
+      </section>
+
+      <section id="projects" class="card">
+        <h2><i class="fas fa-project-diagram"></i> Dự án</h2>
+        <div class="project-item">
+          <h3>🚀 [Thiết kế web đặt lịch sân cầu lông]</h3>
+          <p><strong>Mô tả:</strong> [Dự án: Website đặt lịch sân cầu lông
+Thiết kế và phát triển website cho phép người dùng đăng ký tài khoản, xem lịch trống và đặt sân cầu lông theo khung giờ mong muốn. Hệ thống hỗ trợ quản lý đặt lịch, xác nhận thanh toán và gửi thông báo tự động. Sử dụng HTML, CSS, Node.js và MySQL.
+
+]</p>
+          <p><strong>Link:</strong> <a href="https://github.com/G3-CNPM/Nhom3_DatLichSanCauLong">[Xem dự án]</a></p>
+        </div>
+
+  <!-- FOOTER -->
+  <footer id="contact" class="footer">
+    <h2><i class="fas fa-paper-plane"></i> Liên hệ</h2>
+    <div class="social-links">
+      <a href="https://github.com/LeSiTrung" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+      <a href="https://www.facebook.com/le.trung.376437?locale=vi_VN" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+      <a href="https://www.instagram.com/trungle9946/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
     </div>
+    <p>&copy; 2025 CV.sitrung@gmail.com </p>
+  </footer>
 
-    <footer id="contact" class="footer">
-        <h2><i class="fas fa-paper-plane"></i> Liên hệ</h2>
-        <div class="social-links">
-            <a href="https://github.com/[Tên GitHub của bạn]" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-            <a href="https://www.facebook.com/[Tên Facebook của bạn]" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-            <a href="https://www.linkedin.com/in/[Tên LinkedIn của bạn]" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            </div>
-        <p>&copy; 2025 CV của bạn. All rights reserved.</p>
-    </footer>
-    <script src="trung.js"></script>
+  <!-- JS -->
+  <script>
+    function scrollToSection(id) {
+      const section = document.getElementById(id);
+      if (section) section.scrollIntoView({ behavior: 'smooth' });
+    }
+
+    function toggleHobbyDetails() {
+      const details = document.getElementById('hobby-details');
+      if (details.style.display === 'none') {
+        details.style.display = 'block';
+      } else {
+        details.style.display = 'none';
+      }
+    }
+  </script>
 </body>
 </html>
