--- a/home.html
+++ b/home.html
@@ -78,9 +78,9 @@
             <!-- Thẻ thành viên 4 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="imgs/member4.jpg" alt="Thành viên 4">
+                    <img src="/imgs/trung.jpg" alt="Thành viên 4">
                     <div class="member-overlay">
-                        <a href="member4.html" class="view-cv-btn">Xem CV</a>
+                        <a href="LeSiTrung/trung.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
                 <h3>Thành Viên 4</h3>
