--- a/HoangDangVanKy/ky.html
+++ b/HoangDangVanKy/ky.html
@@ -21,7 +21,7 @@
 
     <nav class="main-navbar-new">
         <div class="navbar-container">
-            <a href="#about" class="nav-item-new">
+            <a href="/home.html" class="nav-item-new" title="Về trang chủ">
                 <i class="fas fa-home"></i> <span>Trang chủ</span>
             </a>
             <a href="#career-goal" class="nav-item-new"> <i class="fas fa-user"></i> <span>Giới thiệu</span>
@@ -177,6 +177,13 @@
                         <p>Ngành: Công nghệ thông tin</p>
                         <p>Chuyên ngành: Công nghệ thông tin</p>
                     </div>
+                </section>
+
+                
+      
+                  <section id="awards" class="cv-section">
+                  <h2><i class="fas fa-award section-icon"></i>Chứng chỉ / Giải thưởng</h2>
+                 <p>Hiện tại tôi chưa có chứng chỉ hoặc giải thưởng nào.</p>
                 </section>
 
                 <section id="projects" class="cv-section">
