--- a/home.html
+++ b/home.html
@@ -95,17 +95,17 @@
             <!-- Thẻ thành viên 5 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="imgs/member5.jpg" alt="Thành viên 5">
+                    <img src="/imgs/ky.png" alt="Thành viên 5">
                     <div class="member-overlay">
-                        <a href="member5.html" class="view-cv-btn">Xem CV</a>
+                        <a href="/HoangDangVanKy/ky.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
                 <h3>Thành Viên 5</h3>
                 <p>Thành viên</p>
                 <div class="member-social">
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="mailto:#"><i class="fas fa-envelope"></i></a>
+                    <a href="http://fagithub.com/vankypro012" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.facebook.com/van.ky.271256" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="mailto:kyhdv5362kyhdv5362@ut.edu.vn"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
