--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
                         <a href="NguyenXuanMinh/minh.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
-                <h3>Thành Viên 2</h3>
+                <h3>Nguyễn Xuân Minh</h3>
                 <p>Thành viên</p>
                 <div class="member-social">
                     <a href="#" target="_blank"><i class="fab fa-github"></i></a>
@@ -83,7 +83,7 @@
                         <a href="LeSiTrung/trung.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
-                <h3>Thành Viên 4</h3>
+                <h3>Lê Sĩ Trung</h3>
                 <p>Thành viên</p>
                 <div class="member-social">
                     <a href="#" target="_blank"><i class="fab fa-github"></i></a>
@@ -100,7 +100,7 @@
                         <a href="/HoangDangVanKy/ky.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
-                <h3>Thành Viên 5</h3>
+                <h3>Hoàng Đặng Văn Kỳ</h3>
                 <p>Thành viên</p>
                 <div class="member-social">
                     <a href="http://fagithub.com/vankypro012" target="_blank"><i class="fab fa-github"></i></a>
