--- a/HoangDangVanKy/ky.html
+++ b/HoangDangVanKy/ky.html
@@ -56,7 +56,7 @@
                 <section class="cv-section personal-details-left">
                     <h3><i class="fas fa-id-card-alt"></i>Thông tin cá nhân</h3>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> <strong>Địa chỉ:</strong> 114/7/3 Tân Chánh Hiệp 18, Q.12, TP.HCM</li>
+                        <li><i class="fas fa-map-marker-alt"></i> <strong>Địa chỉ:</strong> 2450/25/75 Kp1 Tân Chánh Hiệp, Q.12, TP.HCM</li>
                         <li><i class="fas fa-envelope"></i> <strong>Email:</strong> kyhdv5362@ut.edu.vn</li>
                         <li><i class="fas fa-phone"></i> <strong>Điện thoại:</strong> 0982238540</li>
                         <li><i class="fas fa-calendar-alt"></i> <strong>Ngày sinh:</strong> 10/04/2005</li>
