--- a/home.html
+++ b/home.html
@@ -61,17 +61,17 @@
             <!-- Thẻ thành viên 3 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="imgs/member3.jpg" alt="Thành viên 3">
+                    <img src="imgs/huy.png" alt="Thành viên 3">
                     <div class="member-overlay">
-                        <a href="member3.html" class="view-cv-btn">Xem CV</a>
+                        <a href="HoangLeNgocHuy/huy.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
                 <h3>Thành Viên 3</h3>
                 <p>Thành viên</p>
                 <div class="member-social">
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="mailto:#"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/hlnhuy" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.facebook.com/hoang.huy.656702ok"></i></a>
+                    <a href="mailto:hoanglengochuy98@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
 
