--- a/home.html
+++ b/home.html
@@ -52,9 +52,9 @@
                 <h3>Nguyễn Xuân Minh</h3>
                 <p>Thành viên</p>
                 <div class="member-social">
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="mailto:#"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/NguyenXuanMinh1502" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.facebook.com/nguyen.minh.376633/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="mailto:minhnx0034@ut.edu.vn"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
 
@@ -86,9 +86,9 @@
                 <h3>Lê Sĩ Trung</h3>
                 <p>Thành viên</p>
                 <div class="member-social">
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="mailto:#"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/LeSiTrung" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.facebook.com/le.trung.376437?locale=vi_VN" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="mailto:sitrung@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
 
