--- a/home.html
+++ b/home.html
@@ -66,11 +66,11 @@
                         <a href="HoangLeNgocHuy/huy.html" class="view-cv-btn">Xem CV</a>
                     </div>
                 </div>
-                <h3>Thành Viên 3</h3>
+                <h3>Hoàng Lê Ngọc Huy</h3>
                 <p>Thành viên</p>
                 <div class="member-social">
                     <a href="https://github.com/hlnhuy" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.facebook.com/hoang.huy.656702ok"></i></a>
+                    <a href="https://www.facebook.com/hoang.huy.656702"class="fab fa-facebook"></i></a>
                     <a href="mailto:hoanglengochuy98@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
