--- a/HoangLeNgocHuy/huy.html
+++ b/HoangLeNgocHuy/huy.html
@@ -172,6 +172,15 @@
         </div>
       </section>
 
+      <section id="projects" class="section">
+        <h2><i class="fas fa-project-diagram"></i>Chứng chỉ & Giải thưởng</h2>
+        <div class="activities">
+          <div class="activity-item">
+            <em>Chưa có</em>
+          </div>
+        </div>
+      </section>
+
       <!-- Sở thích và hoạt động ngoại khóa -->
       <section class="section">
         <h2><i class="fas fa-heartbeat"></i>Sở thích</h2>
