--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
                 <p>Thành viên</p>
                 <div class="member-social">
                     <a href="https://github.com/hlnhuy" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.facebook.com/hoang.huy.656702"class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/hoang.huy.656702"target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="mailto:hoanglengochuy98@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
