--- a/HoangDangVanKy/ky.html
+++ b/HoangDangVanKy/ky.html
@@ -21,7 +21,7 @@
 
     <nav class="main-navbar-new">
         <div class="navbar-container">
-            <a href="/home.html" class="nav-item-new" title="Về trang chủ">
+            <a href="/index.html" class="nav-item-new" title="Về trang chủ">
                 <i class="fas fa-home"></i> <span>Trang chủ</span>
             </a>
             <a href="#career-goal" class="nav-item-new"> <i class="fas fa-user"></i> <span>Giới thiệu</span>
