--- a/LeSiTrung/trung.html
+++ b/LeSiTrung/trung.html
@@ -44,7 +44,7 @@
   <!-- NAVIGATION -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="../home.html" class="nav-link"><i class="fas fa-home"></i><span>Trang chủ</span></a>
+      <a href="../index.html" class="nav-link"><i class="fas fa-home"></i><span>Trang chủ</span></a>
       <a href="#about" class="nav-link" onclick="scrollToSection('about')"><i class="fas fa-user"></i><span>Giới thiệu</span></a>
       <a href="#skills" class="nav-link" onclick="scrollToSection('skills')"><i class="fas fa-tools"></i><span>Kỹ năng</span></a>
       <a href="#education" class="nav-link" onclick="scrollToSection('education')"><i class="fas fa-graduation-cap"></i><span>Học vấn</span></a>
