--- a/HoangLeNgocHuy/huy.html
+++ b/HoangLeNgocHuy/huy.html
@@ -26,7 +26,7 @@
   <!-- === PHẦN NAVIGATION - MENU ĐIỀU HƯỚNG === -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="../home.html" class="nav-link" title="Về trang chủ">
+      <a href="../index.html" class="nav-link" title="Về trang chủ">
         <i class="fas fa-home"></i>
         <span>Trang chủ</span>
       </a>
