--- a/BuiDangQuynhNhu/nhu.html
+++ b/BuiDangQuynhNhu/nhu.html
@@ -59,7 +59,7 @@
       <!-- Ảnh đại diện và thông tin liên hệ -->
       <div class="profile-avatar-container">
         <div class="profile-avatar">
-          <img src="/imgs/nhu.png" alt="Profile Picture" id="profile-image">
+          <img src="../imgs/nhu.png" alt="Profile Picture" id="profile-image">
         </div>
       </div>
 
