--- a/HoangDangVanKy/ky.html
+++ b/HoangDangVanKy/ky.html
@@ -49,7 +49,7 @@
             <aside class="left-column">
                 <div class="profile-summary-left">
                     <div class="profile-image-circle">
-                        <img src="/imgs/ky.png" alt="Profile Picture" id="profile-image">
+                        <img src="../imgs/ky.png" alt="Profile Picture" id="profile-image">
                     </div>
                 </div>
 
