--- a/LeSiTrung/trung.html
+++ b/LeSiTrung/trung.html
@@ -58,7 +58,7 @@
   <div class="main-content">
     <aside class="left-column">
       <div class="profile-picture">
-        <img src="/imgs/trung.jpg" alt="Ảnh cá nhân của bạn">
+        <img src="../imgs/trung.jpg" alt="Ảnh cá nhân của bạn">
       </div>
 
       <section id="about" class="card">
