--- a/NguyenXuanMinh/minh.html
+++ b/NguyenXuanMinh/minh.html
@@ -16,7 +16,7 @@
   <div class="container" role="main">
     <header>
       <div class="photo" aria-label="Ảnh đại diện">
-        <img src="/imgs/minh.jpg" alt="Ảnh đại diện" />
+        <img src="../imgs/minh.jpg" alt="Ảnh đại diện" />
       </div>
       <div class="header-info">
         <h1>Nguyễn Xuân Minh</h1>
@@ -32,7 +32,7 @@
 
     <nav class="navbar" aria-label="Thanh điều hướng">
       <div class="nav-container">
-        <a href="/index.html" class="nav-link"><i class="fas fa-home"></i><span>Trang chủ</span></a>
+        <a href="../index.html" class="nav-link"><i class="fas fa-home"></i><span>Trang chủ</span></a>
         <a href="#about" class="nav-link"><i class="fas fa-user"></i><span>Giới thiệu</span></a>
         <a href="#skills" class="nav-link"><i class="fas fa-tools"></i><span>Kỹ năng</span></a>
         <a href="#experience" class="nav-link"><i class="fas fa-briefcase"></i><span>Kinh nghiệm</span></a>
