--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- Thẻ thành viên 1 - Trưởng nhóm -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="/imgs/nhu.png" alt="Thành viên 1">
+                    <img src="imgs/nhu.png" alt="Thành viên 1">
                     <div class="member-overlay">
                         <a href="BuiDangQuynhNhu/nhu.html" class="view-cv-btn">Xem CV</a>
                     </div>
@@ -44,7 +44,7 @@
             <!-- Thẻ thành viên 2 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="/imgs/minh.jpg" alt="Thành viên 2">
+                    <img src="imgs/minh.jpg" alt="Thành viên 2">
                     <div class="member-overlay">
                         <a href="NguyenXuanMinh/minh.html" class="view-cv-btn">Xem CV</a>
                     </div>
@@ -61,7 +61,7 @@
             <!-- Thẻ thành viên 3 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="/imgs/huy.png" alt="Thành viên 3">
+                    <img src="imgs/huy.png" alt="Thành viên 3">
                     <div class="member-overlay">
                         <a href="HoangLeNgocHuy/huy.html" class="view-cv-btn">Xem CV</a>
                     </div>
@@ -78,7 +78,7 @@
             <!-- Thẻ thành viên 4 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="/imgs/trung.jpg" alt="Thành viên 4">
+                    <img src="imgs/trung.jpg" alt="Thành viên 4">
                     <div class="member-overlay">
                         <a href="LeSiTrung/trung.html" class="view-cv-btn">Xem CV</a>
                     </div>
@@ -95,7 +95,7 @@
             <!-- Thẻ thành viên 5 -->
             <div class="member-card">
                 <div class="member-image">
-                    <img src="/imgs/ky.png" alt="Thành viên 5">
+                    <img src="imgs/ky.png" alt="Thành viên 5">
                     <div class="member-overlay">
                         <a href="HoangDangVanKy/ky.html" class="view-cv-btn">Xem CV</a>
                     </div>
